# chess-engine-framework

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  requirements.txt
.cache/clangd/index/: Attacks.cpp.815F05CC869CECDF.idx  Attacks.hpp.2F688E2DDFBFC5D6.idx  BitUtil.hpp.7277BD7FDD8240E7.idx  Types.hpp.341F1EA13A87EACA.idx  main.cpp.C264E9D6FB45F6B6.idx
.github/workflows/: cmake-single-platform.yml
app/: boardTools.py  board_tools.py  clean.py  evaluation.py  main.py  tests.py
app/bots/CounterBot/: evaluation.py
app/bots/CrackedBot/: evaluation.py
app/bots/EthanYu080821/: evaluation.py
app/bots/Felixlyon12/: evaluation.py
app/bots/IFOH/: evaluation.py
app/bots/KostiantynRepetskyi/: evaluation.py
app/bots/SN2708/: evaluation.py
app/bots/TemplateBot/: board_tools.py
app/bots/ZiadFakhoury/: evaluation.py  model_numba.npz
app/bots/rishabhkarwal/: evaluation.py
app/bots/tgh9000/: evaluation.py
app/bots/yuyaox122/: evaluation.py
bindings/: libChessLib.dylib  libChessLib_intel.dylib
include/: Attacks.hpp  BitUtil.hpp  BoardState.hpp  Evaluation.hpp  IChessCore.hpp  Interface.hpp  MoveGen.hpp  Search.hpp  Types.hpp  Zobrist.hpp
src/: Main.cpp  main.cpp
src/core/: Attacks.cpp  BoardState.cpp  Evaluation.cpp  MoveGen.cpp  Search.cpp  Zobrist.cpp
src/gui/: Interface.cpp
tests/: ChessTests.cpp
